postgres/db-deployment.yaml
# Kubernetes API version
apiVersion: apps/v1
# Deployment object
kind: Deployment
metadata:
  # The name of the Deployment
  name: postgresdb
spec:
  # Replicas for this Deployment
  replicas: 1
  selector:
    # labels the pods
    matchLabels:
      app: postgresdb
  template:
    metadata:
      labels:
        # The label the pods created from the pod template should have
        app: postgresdb
    spec:
      containers:
        # The container name to execute pods
        - name: postgresdb
          # pull postgresimage from docker hub
          image: postgres:latest
          ports:
            # Assign ports to expose container
            - containerPort: 5432
          volumeMounts:
            # The volume mounts  for the container
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      # Volumes attached to the pod
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            # reference the PersistentVolumeClaim
            claimName: db-persistent-volume-claim
