postgres/db-service.yaml
apiVersion: v1
# Kind for service
kind: Service
metadata:
  # Name your service
  name: postgresdb
  labels:
    app: postgresdb
spec:
  # # Choose how to expose your service
  type: NodePort
  ports:
    # The port number to expose the service
    - protocol: TCP
      nodePort: 31433
      port: 5432
      # targetPort: 5432
  # Pod to route service traffic  
  selector:
    app: postgresdb
